	  compile time command, for now. This is useful for Conectiva
	  only.
	* modules/permission.py: Accept "(remove|delete|del) permission"
	  as well.
	* sqlitedb.py,__init__.py: Implemented sqlite db storage.
	* modules/log.py: Use sqlite storage to maintain logs.
	* modules/modulecontrol.py: Adopted re system, and added a command
	  to show loaded modules.

2002-06-19 Gustavo Niemeyer <niemeyer@conectiva.com>
	* scripts/pybotsetup.py: Adopted new admin permission working.
	* modules/log.py: Created logging facilities.
	* modules/permission.py: Improved permission handling a lot,
	  included help system, and changed admin permission system.

2002-04-03 Gustavo Niemeyer <niemeyer@conectiva.com>
	* scripts/pybot.py: Fixed.
	* modules/freshmeat.py: Fixed little bug in regular expression and
	  implemented help system.
	* modules/messages.py: unregister_help() must have a defret
	  parameter.
	* modules/freshmeat.py: Removed since AppWatch is dead.

2001-12-03 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py, pybot/runner.py: New files with new startup system.
	* run, scripts/pybot.py: Removed.
	* *.py: Converted tabs to spaces so people using other editors
	  feel confortable as well (suggested by John Thingstad).

2001-11-14 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/messages.py: Added help.
	* modules/help.py: Reduced load level.
	* module.py, modules/modulecontrol.py: Added handling of load levels,
	  allowing one to control module loading order.

2001-11-13 Gustavo Niemeyer <niemeyer@conectiva.com>
	* option.py: Fixed little bug in Options.getsoft() keepalive handling.
	* modules/{help,plock}.py: Implemented help module, offering an online
	  help api for other modules (have a look at plock.py for an example).
	* social.py: Minor changes.
 
2001-11-01 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot was completely reestructured.

2001-06-12 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot.py: Now breaking long lines. Other minor changes.