@@ -1,4 +1,12 @@
-[DEFAULT]
+; In this file are maintained the static configurations of pybot.
+;
+; %(datadir)s is dependent on the path pybot.conf is found:
+;
+; pybot.conf         %(datadir)s
+; ---------------    --------------
+; /etc/pybot.conf -> /var/lib/pybot/
+; ./pybot.conf    -> ./data/
+; ~/.pybot/config -> ~/.pybot/data/
 
 [infopack]
 infopackdir = %(datadir)s/infopacks
@@ -7,4 +15,14 @@ infopackdir = %(datadir)s/infopacks
 mondir = /cnc/testadora/mon
 
 [sqlite]
-logfile = %(datadir)s/sqlite.db
+path = %(datadir)s/sqlite.db
+
+[freshmeat]
+url = http://freshmeat.net/backend/recentnews.txt
+proxy = http://proxy.conectiva:3128
+interval = 10
+
+[plocks]
+dirpath = /cnc/distro/plocks/
+
+; vim:ft=dosini
